--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -529,17 +529,25 @@
                                                         <constraint firstAttribute="width" secondItem="nZu-TW-CVL" secondAttribute="height" multiplier="1:1" id="IiM-I1-gTP"/>
                                                     </constraints>
                                                 </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eTZ-0E-9XU" customClass="LikesView" customModule="VeKa" customModuleProvider="target">
+                                                    <rect key="frame" x="86" y="141" width="240" height="128"/>
+                                                </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="BQh-Ex-gOf" firstAttribute="top" secondItem="nZu-TW-CVL" secondAttribute="bottom" constant="10" id="9cz-BP-WmI"/>
                                                 <constraint firstItem="nZu-TW-CVL" firstAttribute="leading" secondItem="b1h-Qp-huf" secondAttribute="leading" constant="50" id="cF2-C4-QtE"/>
                                                 <constraint firstItem="nZu-TW-CVL" firstAttribute="top" secondItem="b1h-Qp-huf" secondAttribute="top" constant="50" id="cmt-JU-8Fw"/>
                                                 <constraint firstItem="nZu-TW-CVL" firstAttribute="centerX" secondItem="b1h-Qp-huf" secondAttribute="centerX" id="d0b-tH-WG2"/>
+                                                <constraint firstItem="eTZ-0E-9XU" firstAttribute="top" secondItem="b1h-Qp-huf" secondAttribute="top" constant="141" id="dQZ-Oa-1Fg"/>
                                                 <constraint firstItem="BQh-Ex-gOf" firstAttribute="centerX" secondItem="nZu-TW-CVL" secondAttribute="centerX" id="enn-sg-cvc"/>
+                                                <constraint firstItem="eTZ-0E-9XU" firstAttribute="leading" secondItem="b1h-Qp-huf" secondAttribute="leading" constant="86" id="nVO-fn-JaK"/>
+                                                <constraint firstItem="BQh-Ex-gOf" firstAttribute="top" secondItem="eTZ-0E-9XU" secondAttribute="bottom" constant="102" id="obf-vp-VR8"/>
+                                                <constraint firstAttribute="trailing" secondItem="eTZ-0E-9XU" secondAttribute="trailing" constant="85" id="rBy-so-bdE"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
                                             <outlet property="friendInfoImageView" destination="nZu-TW-CVL" id="Qrq-QT-dqO"/>
+                                            <outlet property="likesView" destination="eTZ-0E-9XU" id="G9q-dU-KIn"/>
                                             <outlet property="nameFriendInfoLabel" destination="BQh-Ex-gOf" id="HSg-SG-shN"/>
                                         </connections>
                                     </collectionViewCell>
