--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -527,22 +527,23 @@
                                                     <rect key="frame" x="50" y="50" width="311" height="311"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="nZu-TW-CVL" secondAttribute="height" multiplier="1:1" id="IiM-I1-gTP"/>
+                                                        <constraint firstAttribute="width" constant="311" id="Nev-WO-XSR"/>
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eTZ-0E-9XU" customClass="LikesView" customModule="VeKa" customModuleProvider="target">
-                                                    <rect key="frame" x="50" y="317" width="220" height="44"/>
+                                                    <rect key="frame" x="50" y="331" width="120" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="eTZ-0E-9XU" secondAttribute="height" multiplier="5:1" id="CR1-7G-0jC"/>
-                                                        <constraint firstAttribute="height" constant="44" id="gcf-NS-kzm"/>
+                                                        <constraint firstAttribute="width" secondItem="eTZ-0E-9XU" secondAttribute="height" multiplier="4:1" id="CR1-7G-0jC"/>
+                                                        <constraint firstAttribute="height" constant="30" id="gcf-NS-kzm"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="BQh-Ex-gOf" firstAttribute="centerX" secondItem="nZu-TW-CVL" secondAttribute="centerX" id="7gn-kB-f54"/>
                                                 <constraint firstItem="BQh-Ex-gOf" firstAttribute="top" secondItem="nZu-TW-CVL" secondAttribute="bottom" constant="10" id="9cz-BP-WmI"/>
-                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="leading" secondItem="b1h-Qp-huf" secondAttribute="leading" constant="50" id="cF2-C4-QtE"/>
+                                                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="nZu-TW-CVL" secondAttribute="trailing" constant="50" id="St1-x3-FUv"/>
+                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="leading" relation="lessThanOrEqual" secondItem="b1h-Qp-huf" secondAttribute="leading" constant="50" id="cF2-C4-QtE"/>
                                                 <constraint firstItem="nZu-TW-CVL" firstAttribute="top" secondItem="b1h-Qp-huf" secondAttribute="top" constant="50" id="cmt-JU-8Fw"/>
-                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="centerX" secondItem="b1h-Qp-huf" secondAttribute="centerX" id="d0b-tH-WG2"/>
-                                                <constraint firstItem="BQh-Ex-gOf" firstAttribute="centerX" secondItem="nZu-TW-CVL" secondAttribute="centerX" id="enn-sg-cvc"/>
                                                 <constraint firstItem="eTZ-0E-9XU" firstAttribute="bottom" secondItem="nZu-TW-CVL" secondAttribute="bottom" id="lLr-TY-onU"/>
                                                 <constraint firstItem="eTZ-0E-9XU" firstAttribute="leading" secondItem="nZu-TW-CVL" secondAttribute="leading" id="wry-DD-b3T"/>
                                             </constraints>
