--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
                                                             <real key="value" value="0.80000000000000004"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
-                                                            <color key="value" systemColor="systemPurpleColor" red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="value" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
                                                             <size key="value" width="-1" height="0.0"/>
@@ -294,7 +294,7 @@
                                                             <real key="value" value="5"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
-                                                            <color key="value" systemColor="systemIndigoColor" red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="value" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
                                                             <size key="value" width="-1" height="0.0"/>
@@ -445,7 +445,7 @@
                                                             <real key="value" value="0.5"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
-                                                            <color key="value" systemColor="systemGrayColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="value" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
                                                             <size key="value" width="1" height="0.0"/>
@@ -470,11 +470,21 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GlX-da-Xgv" customClass="FilterFriendsView" customModule="VeKa" customModuleProvider="target">
+                                <rect key="frame" x="379" y="116" width="20" height="583"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="1Cf-8s-W6h"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="AXn-Kc-QKn" firstAttribute="trailing" secondItem="YPb-R6-0fD" secondAttribute="trailing" id="8Pa-Bq-r8v"/>
+                            <constraint firstItem="GlX-da-Xgv" firstAttribute="top" secondItem="AXn-Kc-QKn" secondAttribute="top" constant="60" id="I1f-1P-44w"/>
                             <constraint firstItem="YPb-R6-0fD" firstAttribute="top" secondItem="AXn-Kc-QKn" secondAttribute="top" id="e8A-UZ-0Yb"/>
+                            <constraint firstItem="AXn-Kc-QKn" firstAttribute="trailing" secondItem="GlX-da-Xgv" secondAttribute="trailing" constant="15" id="j1n-S5-ggj"/>
+                            <constraint firstItem="AXn-Kc-QKn" firstAttribute="bottom" secondItem="GlX-da-Xgv" secondAttribute="bottom" constant="60" id="v09-7W-nIE"/>
                             <constraint firstItem="AXn-Kc-QKn" firstAttribute="bottom" secondItem="YPb-R6-0fD" secondAttribute="bottom" id="vf2-K0-qhp"/>
                             <constraint firstItem="YPb-R6-0fD" firstAttribute="leading" secondItem="AXn-Kc-QKn" secondAttribute="leading" id="wqH-yH-YK2"/>
                         </constraints>
@@ -482,6 +492,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Друзье" id="DGN-l9-bgC"/>
                     <connections>
+                        <outlet property="filterFriendsControl" destination="GlX-da-Xgv" id="GgR-hw-mqb"/>
                         <outlet property="friendsListTableView" destination="YPb-R6-0fD" id="8Sm-5x-a9D"/>
                     </connections>
                 </viewController>
