--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -507,21 +507,21 @@
                                 <rect key="frame" x="0.0" y="56" width="414" height="703"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="a0i-DP-JPm">
-                                    <size key="itemSize" width="411" height="485"/>
+                                    <size key="itemSize" width="290" height="434"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="friendInfoIdentifire" id="cvx-Xz-ReT" customClass="FriendInfoCollectionViewCell" customModule="VeKa" customModuleProvider="target">
-                                        <rect key="frame" x="1.5" y="0.0" width="411" height="485"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="b1h-Qp-huf">
-                                            <rect key="frame" x="0.0" y="0.0" width="411" height="485"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" reuseIdentifier="friendInfoIdentifire" id="cvx-Xz-ReT" customClass="FriendInfoCollectionViewCell" customModule="VeKa" customModuleProvider="target">
+                                        <rect key="frame" x="62" y="0.0" width="290" height="434"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="F0d-kg-mbe">
+                                            <rect key="frame" x="0.0" y="0.0" width="290" height="434"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQh-Ex-gOf">
-                                                    <rect key="frame" x="184.5" y="371" width="42" height="21"/>
+                                                    <rect key="frame" x="124" y="350" width="42" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="4tL-DB-877"/>
                                                     </constraints>
@@ -529,31 +529,31 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nZu-TW-CVL">
-                                                    <rect key="frame" x="50" y="50" width="311" height="311"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="nZu-TW-CVL" secondAttribute="height" multiplier="1:1" id="IiM-I1-gTP"/>
-                                                        <constraint firstAttribute="width" constant="311" id="Nev-WO-XSR"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eTZ-0E-9XU" customClass="LikesView" customModule="VeKa" customModuleProvider="target">
-                                                    <rect key="frame" x="50" y="331" width="120" height="30"/>
+                                                    <rect key="frame" x="124" y="391" width="120" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="eTZ-0E-9XU" secondAttribute="height" multiplier="4:1" id="CR1-7G-0jC"/>
-                                                        <constraint firstAttribute="height" constant="30" id="gcf-NS-kzm"/>
+                                                        <constraint firstAttribute="width" secondItem="eTZ-0E-9XU" secondAttribute="height" multiplier="4:1" id="kV0-ZJ-PRj"/>
+                                                        <constraint firstAttribute="height" constant="30" id="mev-S7-rE4"/>
                                                     </constraints>
                                                 </view>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nZu-TW-CVL">
+                                                    <rect key="frame" x="0.0" y="50" width="290" height="290"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="nZu-TW-CVL" secondAttribute="height" multiplier="1:1" id="xab-ou-2Bj"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="BQh-Ex-gOf" firstAttribute="centerX" secondItem="nZu-TW-CVL" secondAttribute="centerX" id="7gn-kB-f54"/>
-                                                <constraint firstItem="BQh-Ex-gOf" firstAttribute="top" secondItem="nZu-TW-CVL" secondAttribute="bottom" constant="10" id="9cz-BP-WmI"/>
-                                                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="nZu-TW-CVL" secondAttribute="trailing" constant="50" id="St1-x3-FUv"/>
-                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="leading" relation="lessThanOrEqual" secondItem="b1h-Qp-huf" secondAttribute="leading" constant="50" id="cF2-C4-QtE"/>
-                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="top" secondItem="b1h-Qp-huf" secondAttribute="top" constant="50" id="cmt-JU-8Fw"/>
-                                                <constraint firstItem="eTZ-0E-9XU" firstAttribute="bottom" secondItem="nZu-TW-CVL" secondAttribute="bottom" id="lLr-TY-onU"/>
-                                                <constraint firstItem="eTZ-0E-9XU" firstAttribute="leading" secondItem="nZu-TW-CVL" secondAttribute="leading" id="wry-DD-b3T"/>
+                                                <constraint firstItem="BQh-Ex-gOf" firstAttribute="centerX" secondItem="F0d-kg-mbe" secondAttribute="centerX" id="DHH-5g-Cat"/>
+                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="centerX" secondItem="F0d-kg-mbe" secondAttribute="centerX" id="IY4-d4-Ejy"/>
+                                                <constraint firstItem="eTZ-0E-9XU" firstAttribute="leading" secondItem="BQh-Ex-gOf" secondAttribute="leading" id="REv-xe-JwY"/>
+                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="top" secondItem="F0d-kg-mbe" secondAttribute="top" constant="50" id="cmt-JU-8Fw"/>
+                                                <constraint firstItem="BQh-Ex-gOf" firstAttribute="top" secondItem="nZu-TW-CVL" secondAttribute="bottom" constant="10" id="mXh-Zb-pCB"/>
+                                                <constraint firstItem="eTZ-0E-9XU" firstAttribute="top" secondItem="BQh-Ex-gOf" secondAttribute="bottom" constant="20" id="nHb-5i-9Cy"/>
+                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="width" secondItem="F0d-kg-mbe" secondAttribute="width" id="piq-R7-xan"/>
                                             </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="290" height="434"/>
                                         <connections>
                                             <outlet property="friendInfoImageView" destination="nZu-TW-CVL" id="Qrq-QT-dqO"/>
                                             <outlet property="likesView" destination="eTZ-0E-9XU" id="G9q-dU-KIn"/>
